Score/Score.css
/* ... */
.FifthRow {
    height: 20%;
}

.LeaderBoard {
    height: 58%;
    font-size: 2vmax;
    text-align: center;
    color: white;
    width: 60%;
    margin-right: auto;
    margin-left: auto;
}

.LeaderBoardEntries {
    height: 100%;
    width: 100%;
}

.LeaderBoardEntry {
    font-size: 2vmax;
    text-align: center;
    color: white;
    width: 100%;
    height: 10%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.LockSheetRow {
    height: 23%;
    text-align: center;
    border: 0;
    color: white;
    font-size: 1.3vmax;
}

.HalfRow, .WholeRow, .DiceBox, .HalfRowLeft {
    font-size: 1.8vmax;
    text-align: center;
    width: 100%;
    height: 100%;
    color: white;
    border: 1px solid;
    border-color: silver gray gray silver;
    border: 0px;
    float: left;
}

.ThirdRowLeft {
    text-align: left;
    border: 0px;
    width: 33%;
}

.HalfRow, .DiceBox {
    width: 50%;
}

/*.HalfRow:hover, .DiceBox:hover {
    background-color: #aaaaaa;
    color: black;
}*/

.DiceBox {
    border: 1px solid;
    border-color: silver gray gray silver;
}

.HalfDiceBox {
    width: 50%;
    height: 100%;
    font-size: 6vmax;
    float: left;
}

.LowerLineBoxL, .LowerLineBoxR {
    width: 75%;
    height: 100%;
    font-size: 2vmax;
    text-align: left;
    padding: 3px;
    float: left;
    border: 1px solid;
    border-color: silver gray gray silver;
}

.LowerLineBoxR {
    width: 24%;
    text-align: right;
    padding-right: 5px;
    /*background-color: red;*/
}

.GameInfoBoxL {
    font-size: 1.3vmax;
    text-align: left;
    width: 33%;
    color: white;
    float: left;
}

.GameInfoBoxR {
    font-size: 1.3vmax;
    text-align: right;
    width: 28%;
    color: white;
    float: right;
}

.ClearBtn {
    text-align: center;
    color: white;
    font-size: 1.3vmax;
    width: 33%;
    height: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 1px solid;
    border-color: gray black black gray;
    float: left;
}

.ClearBtn:hover {
    border: 2px solid;
    border-color: gray black black gray;
}

.Turns {
    -webkit-animation: SlideInFromRight 0.9s ease-in-out 0.8s backwards;
    -moz-animation: SlideInFromRight 0.9s ease-in-out 0.8s backwards;
    -ms-animation: SlideInFromRight 0.9s ease-in-out 0.8s backwards;
    -o-animation: SlideInFromRight 0.9s ease-in-out 0.8s backwards;
    animation: SlideInFromRight 0.9s ease-in-out 0.8s backwards;
}


.WhosHere, .PlayerName, .IDReadout {
    font-size: 1.3vmax;
    text-align: center;
    width: 33%;
    color: white;
    float: left;
}

.TotalsLines {
    font-size: 1.3vmax;
    width: 100%;
    text-align: center;
}

.Toast {
    position: fixed;
    height: 1px;
    width: 100%;
    bottom: 90px;
    text-align: center;
    /*z-index: 4;*/
}

.ToastMsg {
    font-family: 'Poppins', arial, helvetica, sans-serif;
    background-color: cornflowerblue;
    display: inline-block;
    min-width: 100px;
    padding: 5px 15px 5px 15px;
    margin-right: auto;
    margin-left: auto;
    text-align: center;
    z-index: 5;
    border-radius: 5px;
    opacity: 0.0;
    -webkit-animation: ToastAni 4.5s ease-in-out 0.2s backwards;
    -moz-animation: ToastAni 4.5s ease-in-out 0.2s backwards;
    -ms-animation: ToastAni 4.5s ease-in-out 0.2s backwards;
    -o-animation: ToastAni 4.5s ease-in-out 0.2s backwards;
    animation: ToastAni 4.5s ease-in-out 0.2s backwards;
}

.DialogBoxMsg {
	position: relative;
    top: -65vh;
	text-align: center;
    background-color: #4d4d4d;
    padding: 20px;
    height: 15vh;
    width: 38vh;
    margin-top: auto;
    margin-bottom: auto;
	margin-right: auto;
	margin-left: auto;
    border: 1px solid;
    border-color: silver gray gray silver;
    border-radius: 20px;
    font-size: 2.2vmax;
}

.DialogBox {
    position: fixed;
	display: inline-block;
	/*z-index: 4;*/
    width: 100%;
    height: 1px;
}

.DiceRack {
    position: fixed;
	display: inline-block;
    width: 100%;
    height: 1px;
    bottom: 180px;
    visibility: hidden;
}

.RollingDice {
    position: relative;
	text-align: center;
    background-color: #4d4d4d;
    margin: 0;
    /*padding: 1px;*/
    height: 5vh;
    width: 35vw;
	margin-right: auto;
	margin-left: auto;
    border: 1px solid;
    border-color: silver gray gray silver;
    border-radius: 20px;
    font-size: 4vmin;
    /*visibility: visible;*/
}

.DiceSumEntry {
    font-size: 2.2vmax;
}

.GameSetupInputs {
    font-size: 3vmax;
    width: 70%;
    border-radius: 15px;
    text-align: center;
}

.Input {
    width: 100%;
    height: 60px;
    float: right;
    font-size: 25px;
    border: 2px solid MidnightBlue;
    margin-left: auto;
    margin-right: auto;
    margin-top: 5px;
    border-radius: 20px;
    background-color: white;
    text-align: center;
    user-select: auto;
}

.WordReveal {
    -webkit-animation: RevealWord 0.4s ease-in-out 0.1s backwards;
    -moz-animation: RevealWord 0.4s ease-in-out 0.1s backwards;
    animation: RevealWord 0.4s ease-in-out 0.1s backwards;
}

.context {
    width: 150px;
    margin: 0;
    padding-left: 0;
    box-shadow: 5px 10px 8px rgba(0, 0, 0, 0.3);
    background: #ffffff;
    border: 1px solid;
    border-color: darkgray gray gray darkgray;
    border-radius: 8px;
    position: fixed;
    color: black;
    font-size: 16px;
    visibility: hidden;
}

.context-link {
    list-style-type: none;
    padding: 0.75em 1em;
    font-size: 0.85em;
    border-radius: 8px;
    cursor: pointer;
}

.context-link:hover {
    background: #eeeeee;
}

@media (prefers-color-scheme: dark) {
.context {
    color:  white;
    background: #171717;
    box-shadow: 5px 10px 8px rgba(0, 0, 0, 0.4);
}

.context-link:hover {
    background: #363636;
}
}
/* ... */

